--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-twitter-embed": "^3.0.3",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.5",
     "web3": "^1.3.1"
