--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "PancakeSwap",
   "name": "PancakeSwap",
-  "description": "Farm CAKE with Pancake LP Tokens",
+  "description": "Farm GME with Pancake LP Tokens",
   "icons": [
     {
       "src": "favicon.ico",
