--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,4 @@ REACT_APP_NODE_2 = "https://bsc-dataseed1.defibit.io"
 REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
 
 REACT_APP_SUBGRAPH_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
+REACT_APP_GRAPHQL_APESWAP = "https://graph.apeswap.finance/subgraphs/name/ape-swap/apeswap-subgraph"
