--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
     "@binance-chain/bsc-connector": "^1.0.0",
     "@crowdin/crowdin-api-client": "^1.10.4",
     "@ethersproject/abi": "^5.0.7",
@@ -57,6 +58,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-twitter-embed": "^3.0.3",
+    "react-twitter-widgets": "^1.10.0",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.5",
     "web3": "^1.3.1"
